# backlog-wiki-sync

./: .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
src/backlog_wiki_sync/: __init__.py  downloader.py  github_wiki_builder.py  uploader.py
